# bybit_bot

./: .env.example  .gitignore  BOT_REPORT.md  DEPLOY_GUIDE.md  PROJECT_STRUCTURE.md  SSH_CONNECTION.md  TELEGRAM_UI.md  bybit-bot.service  check_positions.py  deploy.sh  pyproject.toml  run_bot.sh  stop_bot.sh
bot/: controller.py  deepseek_client.py  error_tracker.py  groq_client.py  llm_router.py  main.py  ollama_client.py  perplexity_client.py  position_service.py  trades_repo.py
bot/db/: arbitrage_repo.py  connection.py  daily_pnl_repo.py  llm_requests_repo.py  pnl_repo.py  trades_repo.py
bot/llm/: __init__.py  base_client.py  prompts.py
bot/services/: analysis_service.py  arbitrage_service.py  balance_service.py  chart_service.py  indicators_service.py  job_scheduler.py  market_regime_service.py  notification_dispatcher.py  position_service.py  prefilter_service.py  scanner_service.py  slippage_guard.py  stats_service.py  trading_service.py  websocket_service.py
bot/telegram_aiogram/: __init__.py  bot.py  handlers.py
bot/telegram_client/: __init__.py  bot.py  formatters.py  handlers.py  (+1 more)
config/: api_config.py  settings.py  trading_config.py
scripts/: check_all_sync.py  check_balance.py  check_btc_arb.py  check_pnl.py  db_debug.py  debug_tickers.py  fix_balances.py  init_database.py  sell_all.py  test_arbitrage_scan.py  test_minimax.py  test_trading_scanner.py
tests/: conftest.py  test_circuit_breaker.py  test_indicators.py  test_job_scheduler.py  test_llm_prompts.py  test_notification_dispatcher.py  test_prefilter_score.py  test_slippage_guard.py
